--- a/templates/chat_mp.html
+++ b/templates/chat_mp.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="{% static 'css/nice-select.css' %}">
     {% endblock stylesheet %}
 
-    {% block title %}Chat{% endblock title %}
+    {% block title %}Message Privé{% endblock title %}
 
     {% block content %}
 
@@ -90,30 +90,7 @@
         </div>
 
         <div class="col-sm-9 col-xs-12 content pt-3 pl-0">
-            <!--Chats-->
-            <div class="mt-1 mb-3 button-container bg-white border shadow-sm lh-sm">
-                <div class="p-2 px-3 mb-0 border-bottom email-chat">
-                    <h6 class="mb-0"><span class="align-bottom" style="line-height: 35px;">Chats</span>
-                        <small class="pull-right"><i class="fa fa-circle text-success"></i> online </small></h6>
-
-                        <div class="clearfix"></div>
-                    </h6>
-                </div>
-
-                <div class="email-chat-body mt-0">
-                    {% for as in Ast %}
-                    <div class="media p-3 border-bottom">
-                        <img class="align-self-center mr-3 rounded-circle" src="{{ as.Image_profil.url }}" width="40px" height="40px" alt="Generic placeholder image">
-                        <div class="media-body dd">
-                            <p><strong>{{ as.Nom_Complet }}</strong></p>
-                            <small>{{ as.Status }}</small>
-                        </div>
-                    </div>
-                    {% endfor %}
-                </div>
-            </div>
-            <!--/Chats-->
-
+            
         </div>
        
         
