--- a/templates/messagerie.html
+++ b/templates/messagerie.html
@@ -65,8 +65,16 @@
                                 <span class="none">Ressource</span>
                             </a>
                         </li>
+                        {% if usr.Status == 'Psychologue' %}
                         <li class="parent">
-                            <a href="#" class=""><i class="fas fa-comments mr-3"></i>
+                            <a href="/assistance" class=""><i class="fas fa-envelope mr-3"></i>
+                                <span class="none">Messagerie</span>
+                            </a>
+                        </li>
+                        {% else %}
+                        {% endif %}
+                        <li class="parent">
+                            <a href="/chat" class=""><i class="fas fa-comments mr-3"></i>
                                 <span class="none">Chat</span>
                             </a>
                         </li>
@@ -120,7 +128,7 @@
                         </li>
                         {% else %}
                         <li class="d-flex mb-1">
-                            <span class="badge badge-pill badge-danger">Non pris en charge</span>
+                            <span class="badge badge-pill badge-danger">{{ m.Status_msg }}</span>
                         </li>
                         {% endif %}
                     </ul>
@@ -153,6 +161,7 @@
                         {% if m.Status_msg == "Non pris en charge" %}
                         <a class="btn btn-success btn-pill btn-lg my-4" href="/cas/{{ m.id }}">Assister</a>
                         {% else %}
+                        <a class="btn btn-success btn-pill btn-lg my-4" href="/non_cas/{{ m.id }}">Ne Plus Assister</a>
                         {% endif %}
                     </div>
                     </div>
