--- a/templates/chat_mp.html
+++ b/templates/chat_mp.html
@@ -90,7 +90,67 @@
         </div>
 
         <div class="col-sm-9 col-xs-12 content pt-3 pl-0">
-            
+            <div class="row mt-3">
+                <!--Messages-->
+                <div class="col-sm-12">
+                    <div class="mt-1 mb-3 p-3 button-container bg-white shadow-sm border">
+                        <h6 class="mb-3">Messages Privés</h6><hr>
+
+                        <div class="feed-single mb-3">
+                            <div class="media">
+                                <img class="mr-3 rounded-circle" height="40px" width="40px" src="assets/img/John-doe.png" alt="Generic placeholder image">
+                                <div class="media-body">
+                                    <h6 class="mt-1">Mario Mendez 
+                                        <small class="text-muted pl-2 border-radius"><span class="badge badge-danger">Unread</span></small>
+                                        <small class="text-muted small pull-right"><i class="fa fa-clock"></i> 10 hours</small>
+
+                                        <p class="clearfix"></p>
+                                    </h6>
+                                    <p>Hello, New update on my existing projects #portfolio #architecture <a href="#" class="text-theme">www.github.io/architect-mendez</a></p>
+                                </div>
+                            </div> <hr>
+
+                            <div class="media">
+                                <img class="mr-3 rounded-circle" height="40px" width="40px" src="assets/img/client-img3.png" alt="Generic placeholder image">
+                                <div class="media-body">
+                                    <h6 class="mt-1">Helena Mendez 
+                                        <small class="text-muted pl-2 border-radius"><span class="badge badge-danger">Unread</span></small>
+                                        <small class="text-muted small pull-right"><i class="fa fa-clock"></i> August 8</small>
+
+                                        <p class="clearfix"></p>
+                                    </h6>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+                                    
+                                </div>
+                            </div> <hr>
+
+                            <div class="media">
+                                <img class="mr-3 rounded-circle" height="40px" width="40px" src="assets/img/client-img2.png" alt="Generic placeholder image">
+                                <div class="media-body">
+                                    <h6 class="mt-1">Aliya Mario 
+                                        <small class="text-muted pl-2 border-radius"><span class="badge badge-danger">Unread</span></small>
+                                        <small class="text-muted small pull-right"><i class="fa fa-clock"></i> 1 month</small>
+
+                                        <p class="clearfix"></p>
+                                    </h6>
+                                    <p>Hi Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+                                </div>
+                            </div> <hr>
+                            <div class="text-justify">
+                                <form action="" method="post">
+                                    <div class="form-group mb-3">
+                                        <input type="text" class="form-control">
+                                    </div>
+                                    <input type="submit" class="btn btn-success" value="Envoyer">
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--/Messages-->
+            </div>
         </div>
        
         
