--- a/templates/chat_mp.html
+++ b/templates/chat_mp.html
@@ -94,7 +94,7 @@
                 <!--Messages-->
                 <div class="col-sm-12">
                     <div class="mt-1 mb-3 p-3 button-container bg-white shadow-sm border">
-                        <h6 class="mb-3">Messages Privés</h6><hr>
+                        <h6 class="mb-3">{{ usr_mp.Nom_Complet }}</h6><hr>
 
                         <div class="feed-single mb-3">
                             <div class="media">
