--- a/templates/chat_mp.html
+++ b/templates/chat_mp.html
@@ -19,6 +19,14 @@
     <link rel="stylesheet" href="{% static 'js/calendar/bootstrap_calendar.css' %}">
     <!--Nice select -->
     <link rel="stylesheet" href="{% static 'css/nice-select.css' %}">
+    <style>
+        #anyClass {
+            height:400px;
+            overflow-y: scroll;
+          }
+          
+    </style>
+    
     {% endblock stylesheet %}
 
     {% block title %}Message Privé{% endblock title %}
@@ -72,12 +80,13 @@
                             </a>
                         </li>
                         {% else %}
-                        {% endif %}
                         <li class="parent">
                             <a href="/chat" class=""><i class="fas fa-comments mr-3"></i>
                                 <span class="none">Chat</span>
                             </a>
                         </li>
+                        {% endif %}
+
                         <li class="parent">
                             <a href="/logout" class=""><i class="fas fa-power-off mr-3"></i>
                                 <span class="none">Déconnexion</span>
@@ -94,54 +103,31 @@
                 <!--Messages-->
                 <div class="col-sm-12">
                     <div class="mt-1 mb-3 p-3 button-container bg-white shadow-sm border">
-                        <h6 class="mb-3">{{ usr_mp.Nom_Complet }}</h6><hr>
+                        <h6 class="mb-3">{{ room }}</h6><hr>
 
                         <div class="feed-single mb-3">
-                            <div class="media">
-                                <img class="mr-3 rounded-circle" height="40px" width="40px" src="assets/img/John-doe.png" alt="Generic placeholder image">
-                                <div class="media-body">
-                                    <h6 class="mt-1">Mario Mendez 
-                                        <small class="text-muted pl-2 border-radius"><span class="badge badge-danger">Unread</span></small>
-                                        <small class="text-muted small pull-right"><i class="fa fa-clock"></i> 10 hours</small>
+                            <div id="anyClass">
+                                {% for msg in messages %}
+                                <div class="media">
+                                    <img class="mr-3 rounded-circle" height="40px" width="40px" src="{{ msg.User.Image_profil.url }}">
+                                    <div class="media-body">
+                                        <h6 class="mt-1">{{ msg.User.Nom_Complet }}
+                                            <small class="text-muted small pull-right"><i class="fa fa-clock"></i>{{ msg.Date }}</small>
 
-                                        <p class="clearfix"></p>
-                                    </h6>
-                                    <p>Hello, New update on my existing projects #portfolio #architecture <a href="#" class="text-theme">www.github.io/architect-mendez</a></p>
-                                </div>
-                            </div> <hr>
+                                            <p class="clearfix"></p>
+                                        </h6>
+                                        <p>{{ msg.Message }}</p>
+                                    </div>
+                                </div> <hr>
+                                {% endfor %}
+                            </div>
 
-                            <div class="media">
-                                <img class="mr-3 rounded-circle" height="40px" width="40px" src="assets/img/client-img3.png" alt="Generic placeholder image">
-                                <div class="media-body">
-                                    <h6 class="mt-1">Helena Mendez 
-                                        <small class="text-muted pl-2 border-radius"><span class="badge badge-danger">Unread</span></small>
-                                        <small class="text-muted small pull-right"><i class="fa fa-clock"></i> August 8</small>
-
-                                        <p class="clearfix"></p>
-                                    </h6>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-                                    
-                                </div>
-                            </div> <hr>
-
-                            <div class="media">
-                                <img class="mr-3 rounded-circle" height="40px" width="40px" src="assets/img/client-img2.png" alt="Generic placeholder image">
-                                <div class="media-body">
-                                    <h6 class="mt-1">Aliya Mario 
-                                        <small class="text-muted pl-2 border-radius"><span class="badge badge-danger">Unread</span></small>
-                                        <small class="text-muted small pull-right"><i class="fa fa-clock"></i> 1 month</small>
-
-                                        <p class="clearfix"></p>
-                                    </h6>
-                                    <p>Hi Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-                                </div>
-                            </div> <hr>
                             <div class="text-justify">
-                                <form action="" method="post">
+                                <form id="post-form">
+                                    {% csrf_token %}
                                     <div class="form-group mb-3">
-                                        <input type="text" class="form-control">
+                                        <input type="hidden" name="room_id" id="room_id" value="{{ room }}"/>
+                                        <input type="text" class="form-control" name="message" id="message">
                                     </div>
                                     <input type="submit" class="btn btn-success" value="Envoyer">
                                 </form>
@@ -197,5 +183,23 @@
     <script>
         //Nice select
         $('.bulk-actions').niceSelect();
+        $(document).on('submit','#post-form',function(e){
+            e.preventDefault();
+        
+            $.ajax({
+            type:'POST',
+            url:'/send',
+            data:{
+                username:$('#username').val(),
+                room_id:$('#room_id').val(),
+                message:$('#message').val(),
+                csrfmiddlewaretoken:$('input[name=csrfmiddlewaretoken]').val(),
+            },
+            success: function(data){
+                //alert(data)
+            }
+            });
+            document.getElementById('message').value = ''
+        });
     </script>
     {% endblock script %}
