--- a/templates/ressource_app.html
+++ b/templates/ressource_app.html
@@ -72,12 +72,13 @@
                             </a>
                         </li>
                         {% else %}
-                        {% endif %}
                         <li class="parent">
-                            <a href="#" class=""><i class="fas fa-comments mr-3"></i>
+                            <a href="/chat" class=""><i class="fas fa-comments mr-3"></i>
                                 <span class="none">Chat</span>
                             </a>
                         </li>
+                        {% endif %}
+
                         <li class="parent">
                             <a href="/logout" class=""><i class="fas fa-power-off mr-3"></i>
                                 <span class="none">Déconnexion</span>
