user app debugs

--- a/templates/profil_user.html
+++ b/templates/profil_user.html
@@ -185,13 +185,10 @@
 
                                             <div class="feed-footer">
                                                 <span class="pr-3">
-                                                    <a href="#"><i class="fa fa-star"></i> Réagir</a></span>
+                                                    <a href="#"><i class="fas fa-heart"></i> {{ post.Like.count }}</a></span>
                                                 <span class="pr-3">
                                                     <a href="/details_pub/{{ post.id }}"><i class="fa fa-comment"></i> Voir Commentaires</a>
                                                 </span>
-                                                <span class="pr-3">
-                                                    <a href="#"><i class="fas fa-comments"></i> Messge Privé</a></span>
-                                                <span class="pl-3 pull-right"><i class="fa fa-ellipsis-h"></i></span>
 
                                                 <p class="clearfix"></p>
                                             </div>
