--- a/templates/edit_user_admin.html
+++ b/templates/edit_user_admin.html
@@ -85,12 +85,16 @@
                         <div class="col-sm-12">
                             <!--Default elements-->
                             <div class="mt-1 mb-3 p-3 button-container bg-white border shadow-sm">
-                                <form class="form-horizontal mt-4 mb-5" action="/update_user_admin/{{ Users_e.id }}" enctype="multipart/form-data">
+                                <form class="form-horizontal mt-4 mb-5" method="post" action="/update_user_admin/{{ Users_e.id }}" enctype="multipart/form-data">
                                     {%  csrf_token %}
 
                                     <div class="form-group row">
                                         <label for="Image_Profil" class="control-label col-sm-2">Photo de Profil</label>
                                         <div class="col-sm-8">
+                                            <p class="file_upload">Currently :
+                                                <a href="{{ Users_e.Image_profil.url }}">{{ Users_e.Image_profil }}</a><br>
+                                                " Change "
+                                            </p>
                                             <input type="file" name="Image_Profil" accept="image/*" onchange="loadFile(event)" required >
                                         </div>
                                         <img id="output" src="{% static 'img/default-avatar.jpg' %}" class="rounded-circle" width="100" height="100" />
