--- a/templates/profil.html
+++ b/templates/profil.html
@@ -235,9 +235,9 @@
                                 </div>
 
                                 <div class="form-group row">
-                                    <label for="Nom" class="control-label col-sm-2">Nom Complet</label>
+                                    <label for="Nom_Complet" class="control-label col-sm-2">Nom Complet</label>
                                     <div class="col-sm-10">
-                                        <input type="text" name="Nom" class="form-control" value="{{ usr.Nom_Complet }}" />
+                                        <input type="text" name="Nom_Complet" class="form-control" value="{{ usr.Nom_Complet }}" />
                                     </div>
                                 </div>
 
