--- a/templates/profil.html
+++ b/templates/profil.html
@@ -226,18 +226,18 @@
                         <div class="modal-body">
                             <form class="form-horizontal mt-4 mb-5" method="post" action="{% url 'update_user_app' usr.id %}" enctype="multipart/form-data">
                                 {%  csrf_token %}
-                                <div class="form-group row">
+                                {% comment %} <div class="form-group row">
                                     <label for="Image_Profil" class="control-label col-sm-2">Photo de Profil</label>
                                     <div class="col-sm-8">
                                         <input type="file" name="Image_Profil" accept="image/*" onchange="loadFile(event)" required >
                                     </div>
                                     <img id="output" src="{% static 'img/default-avatar.jpg' %}" class="rounded-circle" width="100" height="100" />
-                                </div>
+                                </div> {% endcomment %}
 
                                 <div class="form-group row">
-                                    <label for="Nom_Complet" class="control-label col-sm-2">Nom Complet</label>
+                                    <label for="Nom" class="control-label col-sm-2">Nom Complet</label>
                                     <div class="col-sm-10">
-                                        <input type="text" name="Nom_Complet" class="form-control" value="{{ usr.Nom_Complet }}" />
+                                        <input type="text" name="Nom" class="form-control" value="{{ usr.Nom_Complet }}" />
                                     </div>
                                 </div>
 
