ordonner affichage des menus + redirection relogin après avoir changer infos user in app

--- a/templates/profil.html
+++ b/templates/profil.html
@@ -44,13 +44,13 @@
                                 </a>  
                             </li>
                             <li class="parent">
-                                <a href="/journal_app" class=""><i class="fas fa-book mr-3"> </i>
-                                    <span class="none">Journal</span>
+                                <a href="/profil" class=""><i class="fas fa-user mr-3"> </i>
+                                    <span class="none">Mon profil</span>
                                 </a>  
                             </li>
                             <li class="parent">
-                                <a href="/profil" class=""><i class="fas fa-user mr-3"> </i>
-                                    <span class="none">Mon profil</span>
+                                <a href="/journal_app" class=""><i class="fas fa-book mr-3"> </i>
+                                    <span class="none">Journal</span>
                                 </a>  
                             </li>
                             <li class="parent">
@@ -286,7 +286,7 @@
                                 <div class="form-group row">
                                     <div class="offset-sm-2 col-sm-9">
                                         <input type="submit" class="btn btn-success" value="Modifier">
-                                        <a class="btn btn-danger" href="/journal_app">Annuler</a>
+                                        <button type="button" class="btn btn-danger" data-dismiss="modal">Annuler</button>
                                     </div>
                                 </div>
 
