changement du champ Profession en Fonction

--- a/templates/journal_app.html
+++ b/templates/journal_app.html
@@ -113,7 +113,7 @@
                                         <div class="media-body">
                                             <h6 class="mt-1">{{ post.Auteur_pub.Nom_Complet }}
                                                 <small class="text-muted pl-2"><i class="fa fa-clock"></i>&nbsp; {{ post.Date_pub }}</small>
-                                                <small class="text-muted small pull-right"><i>{{ post.Auteur_pub.Profession }}</i> <i class="fa fa-bookmark-o pl-2"></i></small>
+                                                <small class="text-muted small pull-right"><i>{{ post.Auteur_pub.Fonction }}</i> <i class="fa fa-bookmark-o pl-2"></i></small>
                                                 <br>
                                             </h6>
                                             <div>                                    
