--- a/templates/messagerie.html
+++ b/templates/messagerie.html
@@ -193,8 +193,8 @@
                                     <td>{{ m.User_send_msg.Departement }}</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">Profession</th>
-                                    <td>{{ m.User_send_msg.Profession }}</td>
+                                    <th scope="row">Fonction</th>
+                                    <td>{{ m.User_send_msg.Fonction }}</td>
                                 </tr>
                             </tbody>
                         </table>
