--- a/templates/profil_user.html
+++ b/templates/profil_user.html
@@ -100,7 +100,7 @@
                                 <div class="row">
                                     <div class="col-md-5 offset-md-3 col-sm-12 offset-sm-0 col-12 bio-header">
                                         <h3 class="mt-4">{{ ustr.Nom_Complet }}</h3>
-                                        <span class="text-muted mt-0 bio-request">{{ ustr.Profession }}</span>
+                                        <span class="text-muted mt-0 bio-request">{{ ustr.Fonction }}</span>
                                     </div>
                                 </div>
                             </div>
@@ -140,8 +140,8 @@
                                             <td>{{ ustr.Departement }}</td>
                                         </tr>
                                         <tr>
-                                            <th scope="row">Profession</th>
-                                            <td>{{ ustr.Profession }}</td>
+                                            <th scope="row">Fonction</th>
+                                            <td>{{ ustr.Fonction }}</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -171,7 +171,7 @@
                                         <div class="media-body">
                                             <h6 class="mt-1">{{ post.Auteur_pub.Nom_Complet }}
                                                 <small class="text-muted pl-2"><i class="fa fa-clock"></i>{{ post.Date_pub }}</small>
-                                                <small class="text-muted small pull-right"><i>{{ post.Auteur_pub.Profession }}</i> <i class="fa fa-bookmark-o pl-2"></i></small>
+                                                <small class="text-muted small pull-right"><i>{{ post.Auteur_pub.Fonction }}</i> <i class="fa fa-bookmark-o pl-2"></i></small>
                                                 <br>
                                             </h6>
                                             <div>                                    
