--- a/templates/user_admin.html
+++ b/templates/user_admin.html
@@ -98,7 +98,7 @@
                                                 <th>Age</th>
                                                 <th>Email</th>
                                                 <th>Departement</th>
-                                                <th>Profession</th>
+                                                <th>Fonction</th>
                                                 <th>Username</th>
                                                 <th>Password</th>
                                                 <th>Status</th>
@@ -114,7 +114,7 @@
                                                 <td>{{ us.Age }}</td>
                                                 <td>{{ us.Email }}</td>
                                                 <td>{{ us.Departement }}</td>
-                                                <td>{{ us.Profession }}</td>
+                                                <td>{{ us.Fonction }}</td>
                                                 <td>{{ us.Username }}</td>
                                                 <td>{{ us.Password }}</td>
                                                 <td>{{ us.Status }}</td>
