--- a/templates/add_user_admin.html
+++ b/templates/add_user_admin.html
@@ -125,9 +125,9 @@
                                     </div>
                                     
                                     <div class="form-group row">
-                                        <label for="Profession" class="control-label col-sm-2">Profession</label>
+                                        <label for="Fonction" class="control-label col-sm-2">Fonction</label>
                                         <div class="col-sm-10">
-                                            <input type="text" name="Profession" class="form-control" placeholder="Profession" required />
+                                            <input type="text" name="Fonction" class="form-control" placeholder="Fonction" required />
                                         </div>
                                     </div>
 
