--- a/templates/edit_user_admin.html
+++ b/templates/edit_user_admin.html
@@ -129,9 +129,9 @@
                                     </div>
 
                                     <div class="form-group row">
-                                        <label for="Profession" class="control-label col-sm-2">Profession</label>
+                                        <label for="Fonction" class="control-label col-sm-2">Fonction</label>
                                         <div class="col-sm-10">
-                                            <input type="text" name="Profession" class="form-control" value="{{ Users_e.Profession }}" />
+                                            <input type="text" name="Fonction" class="form-control" value="{{ Users_e.Fonction }}" />
                                         </div>
                                     </div>
 
