--- a/templates/profil.html
+++ b/templates/profil.html
@@ -100,7 +100,7 @@
                                 <div class="row">
                                     <div class="col-md-5 offset-md-3 col-sm-12 offset-sm-0 col-12 bio-header">
                                         <h3 class="mt-4">{{ usr.Nom_Complet }}</h3>
-                                        <span class="text-muted mt-0 bio-request">{{ usr.Profession }}</span>
+                                        <span class="text-muted mt-0 bio-request">{{ usr.Fonction }}</span>
                                     </div>
                                     <div class="col-md-4 col-sm-12 col-12 px-5 text-right pt-4 bio-comment">
                                         <button class="btn btn-outline-info btn-round" data-toggle="modal" data-target="#myModal">
@@ -145,8 +145,8 @@
                                             <td>{{ usr.Departement }}</td>
                                         </tr>
                                         <tr>
-                                            <th scope="row">Profession</th>
-                                            <td>{{ usr.Profession }}</td>
+                                            <th scope="row">Fonction</th>
+                                            <td>{{ usr.Fonction }}</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -176,7 +176,7 @@
                                         <div class="media-body">
                                             <h6 class="mt-1">{{ post.Auteur_pub.Nom_Complet }}
                                                 <small class="text-muted pl-2"><i class="fa fa-clock"></i>{{ post.Date_pub }}</small>
-                                                <small class="text-muted small pull-right"><i>{{ post.Auteur_pub.Profession }}</i> <i class="fa fa-bookmark-o pl-2"></i></small>
+                                                <small class="text-muted small pull-right"><i>{{ post.Auteur_pub.Fonction }}</i> <i class="fa fa-bookmark-o pl-2"></i></small>
                                                 <br>
                                             </h6>
                                             <div>                                    
@@ -263,9 +263,9 @@
                                 </div>
 
                                 <div class="form-group row">
-                                    <label for="Profession" class="control-label col-sm-2">Profession</label>
+                                    <label for="Fonction" class="control-label col-sm-2">Fonction</label>
                                     <div class="col-sm-10">
-                                        <input type="text" name="Profession" class="form-control" value="{{ usr.Profession }}" />
+                                        <input type="text" name="Fonction" class="form-control" value="{{ usr.Fonction }}" />
                                     </div>
                                 </div>
 
