augmentation de la taille max des caracteres dans contenu post, scroll sur les pages

--- a/templates/app.html
+++ b/templates/app.html
@@ -10,6 +10,8 @@
 
     <!--Meta Responsive tag-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <style>
+    </style>
 
     {% block stylesheet %}{% endblock stylesheet %}
 
