--- a/templates/ressource_app.html
+++ b/templates/ressource_app.html
@@ -19,6 +19,12 @@
     <link rel="stylesheet" href="{% static 'js/calendar/bootstrap_calendar.css' %}">
     <!--Nice select -->
     <link rel="stylesheet" href="{% static 'css/nice-select.css' %}">
+    <style>
+        #anyClass {
+            height:750px;
+            overflow-y: scroll;
+          } 
+    </style>
     {% endblock stylesheet %}
 
     {% block title %}Ressource{% endblock title %}
@@ -90,7 +96,7 @@
             </div>
         </div>
 
-        <div class="col-sm-9 col-xs-12 content pt-3 pl-0">
+        <div class="col-sm-9 col-xs-12 content pt-3 pl-0" id="anyClass">
             <div class="row mt-3">
                 <div class="col-sm-12">
                     <div class="mt-1 mb-3 p-3 button-container border bg-white shadow-sm custom-tabs">
