résolution de quelques remarques

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -41,7 +41,7 @@
                 <div class="sidebar-menu-container">
                     <ul class="sidebar-menu mt-4 mb-4">
                         <li class="parent">
-                            <a href="" class=""><i class="fa fa-rocket mr-3"> </i>
+                            <a href="/index_app" class=""><i class="fa fa-rocket mr-3"> </i>
                                 <span class="none">Accueil</span>
                             </a>  
                         </li>
@@ -119,11 +119,12 @@
         {% endfor %}
         {% else %}
         <div class="col-sm-9 col-xs-12 content pt-3 pl-0">
-            <h5 class="mb-3" ><strong>Vous n'avez pas envoyer de message</strong></h5>
+            <h5 class="mb-3" ><strong>Vous n'avez pas envoyer de message.</strong></h5>
+            <p>Pour envoyer un message au psy, voir la page Gestion de Stress</p>
+            <a href="/manage_stress_app">Cliquez ici</a>
         </div>
         {% endif %}
         <!--Dashboard Profile card-->
-       
         
     </div>
 
