--- a/templates/chat_mp.html
+++ b/templates/chat_mp.html
@@ -49,7 +49,7 @@
                 <div class="sidebar-menu-container">
                     <ul class="sidebar-menu mt-4 mb-4">
                         <li class="parent">
-                            <a href="" class=""><i class="fa fa-rocket mr-3"> </i>
+                            <a href="/index_app" class=""><i class="fa fa-rocket mr-3"> </i>
                                 <span class="none">Accueil</span>
                             </a>  
                         </li>
